<resources>
    <string name="app_name">WorkIOT</string>
    <string name="createButton">Create</string>

    <string name="benchpress">Bench-press</string>
    <string name="deadlift">Deadlifts</string>
    <string name="squat">Squats</string>

    <string name="benchpress1rm">Bench-press(1RM)</string>
    <string name="deadlift1rm">Deadlifts(1RM)</string>
    <string name="squat1rm">Squats(1RM)</string>

    <string name="hypertrophy">Hypertrophy</string>
    <string name="endurance">Endurance</string>
    <string name="strength">Strength</string>

    <string name="amount">Amount</string>
    <string name="total">Total Reps</string>
    <string name="reportTitle">Workout History</string>
    <string name="dashboardTitle">User Dashboard</string>
    <string name="action_workout">Add Workout</string>
    <string name="action_report">Report</string>
    <string name="action_settings">Settings</string>
    <string name="action_dashboard">Dashboard</string>
    <string name="action_editsettings">Edit Settings</string>
    <string name="action_editworkout">Edit Workout</string>

    <!--Navigation Drawer -->
    <string name="group_settings">Settings</string>
    <string name="nav_header_title">WorkIOT</string>
    <string name="nav_header_subtitle">iamianmullins@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="select_profile_image">Select Profile Image</string>


    <string name="action_about">About Us</string>
    <string name="aboutus_message">WorkIOT\n\nWorkout tracking android application\n\n Thank you for trying my app\n\n Why not try using the app with the WorkIOT device..? </string>


    <string name="workoutsNotFound">No Workouts Found...\nGo workout!</string>
    <string name="workoutError">Error : Couldn\'t add workout...</string>
    <string name="messageLoading">Please Wait while the Workouts are Loading...</string>Settings not Found, please refresh this page!

    <string name="settingsNotFound">Settings not Found,\n please refresh this page!</string>
    <string name="settingsError">Error : Couldn\'t add user settings...</string>
    <string name="settingsLoading">Please Wait while your settings are Loading...</string>

    <!-- Workout detail fragment -->
    <string name="workoutDetails">Workout Details</string>
    <string name="title_reps">Reps</string>
    <string name="title_set">Set</string>
    <string name="title_fail">Fail Status</string>
    <string name="workingWeight">Weight</string>
    <string name="workoutGoal">Workout Goal</string>
    <string name="workoutType">Workout Type</string>
    <string name="totalReps">Total Reps</string>
    <string name="timestamp">Timestamp</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="set_1">Set 1</string>
    <string name="set_2">Set 2</string>
    <string name="set_3">Set 3</string>
    <string name="set_4">Set 4</string>
    <string name="set_5">Set 5</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>

    <!-- Dashboard fragment -->
    <string name="totalWorkouts">Total Workouts</string>
    <string name="totalBenchpress">Bench-press Workouts</string>
    <string name="totalDeadlifts">Deadlift Workouts</string>
    <string name="totalSquats">Squat Workouts</string>
    <string name="dashboardHeading">Lifetime Stats</string>
    <string name="dashboardHeadingPcnt">Lifetime Stats %</string>
    <string name="dashboardHeadFail">Fail Analysis</string>
    <string name="topFailReason">Top Fail Reason</string>
    <string name="topFailSet">Top Fail Set</string>
    <string name="zero">N/A</string>


    <!-- START Firebase Resources-->
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_nfc">Nfc Device</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="google">Google</string>


    <!--Spinner-->
    <string-array name="fitnessGoals">
        <item>Endurance</item>
        <item>Hypertrophy</item>
        <item>Strength</item>
    </string-array>

    <!--Spinner-->
    <string-array name="workoutTypes">
        <item>Bench-Press</item>
        <item>Deadlifts</item>
        <item>Squats</item>
    </string-array>

    <!--Spinner-->
    <string-array name="failReason">
        <item>N/A</item>
        <item>Bar-tilt</item>
        <item>Fatigue</item>
        <item>Multiple</item>
        <item>Speed</item>
        <item>Other</item>
    </string-array>

    <string name="workoutTutorial">Watch exercise tutorial</string>
</resources>