<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.workout.WorkoutFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_border"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title_set"
                android:layout_width="125dp"
                android:layout_height="25dp"
                android:textSize="20dp"
                android:text="@string/title_set" />

            <TextView
                android:id="@+id/title_setCounter"
                android:layout_width="125dp"
                android:layout_height="25dp"
                android:text="@string/title_reps"
                android:textSize="20dp"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/title_setReason"
                android:layout_width="125dp"
                android:layout_height="25dp"
                android:text="@string/title_fail"
                android:textSize="20dp"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/set1_textView"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/set_1" />

            <NumberPicker
                android:id="@+id/repPicker1"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <NumberPicker
                android:id="@+id/reasonPicker1"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/set2_textView"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/set_2" />

            <NumberPicker
                android:id="@+id/repPicker2"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <NumberPicker
                android:id="@+id/reasonPicker2"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/set3_textView"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/set_3" />

            <NumberPicker
                android:id="@+id/repPicker3"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <NumberPicker
                android:id="@+id/reasonPicker3"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/set4_textView"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/set_4" />

            <NumberPicker
                android:id="@+id/repPicker4"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <NumberPicker
                android:id="@+id/reasonPicker4"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/set5_textView"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/set_5" />

            <NumberPicker
                android:id="@+id/repPicker5"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <NumberPicker
                android:id="@+id/reasonPicker5"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/workWeight_textView"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/workingWeight" />

            <NumberPicker
                android:id="@+id/workingWeightPicker"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>



    </LinearLayout>

    <Spinner
        android:id="@+id/selectGoal"
        android:layout_width="254dp"
        android:layout_height="26dp"
        android:entries="@array/fitnessGoals"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/createButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="@+id/exerciseType"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.108" />

    <TextView
        android:id="@+id/workingWeightTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/total"
        android:textSize="20dp"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.086" />

    <TextView
        android:id="@+id/repCounter"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/exerciseType"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/workingWeightTitle"
        app:layout_constraintVertical_bias="0.0" />



    <Button
        android:id="@+id/createButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/createButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseType"
        app:layout_constraintVertical_bias="1.0" />

    <RadioGroup
        android:id="@+id/exerciseType"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:textSize="20dp"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/linearLayout2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.576">

        <RadioButton
            android:id="@+id/Benchpress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:checked="false"
            android:layoutDirection="rtl"
            android:text="@string/benchpress"
            android:textAlignment="center" />

        <RadioButton
            android:id="@+id/Deadlift"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:checked="false"
            android:layoutDirection="rtl"
            android:text="@string/deadlift"
            android:textAlignment="center" />

        <RadioButton
            android:id="@+id/Squat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:checked="true"
            android:layoutDirection="rtl"
            android:text="@string/squat"
            android:textAlignment="center" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>