<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>
        <variable
            name="settingsvm"
            type="ie.wit.work_iot_mobile.ui.settingsEdit.SettingsEditViewModel" />
    </data>
    <RelativeLayout
        android:id="@+id/cardSettings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/custom_border"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageIcon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@mipmap/ic_launcher_round" />


        <TableLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="650dp"
            android:layout_below="@+id/imageIcon"
            android:layout_alignStart="@+id/imageIcon"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/settingsGoalTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="25dp"
                android:layout_toEndOf="@+id/imageIcon"
                android:text="Exercise Goal"
                android:textSize="24sp"
                tools:text="Exercise Goal" />

            <EditText
                android:id="@+id/settingsGoal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="0dp"
                android:layout_toEndOf="@+id/imageIcon"
                android:text="@={settingsvm.observableSettings.exerciseGoal}"
                android:textSize="24sp"
                tools:text="Exercise Goal" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/settingsNfcTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="25dp"
                android:layout_toEndOf="@+id/settingsGoal"
                android:text="@string/hint_nfc"
                android:textSize="24sp"
                tools:text="@string/hint_nfc" />

            <EditText
                android:id="@+id/settingsNfc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settingsGoal"
                android:layout_alignStart="@+id/settingsGoal"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="0dp"
                android:text="@={settingsvm.observableSettings.nfc}"
                android:textSize="24sp"
                tools:text="@string/hint_nfc" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/settingsOnermTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="25dp"
                android:layout_toEndOf="@+id/settingsNfc"
                android:text="Current One Rep Max"
                android:textSize="24sp"
                tools:text="One Rep Max" />

            <EditText
                android:id="@+id/settingsOnerm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settingsNfc"
                android:layout_alignStart="@+id/settingsNfc"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="0dp"
                android:text="@={settingsvm.observableSettings.oneRm}"
                android:textSize="24sp"
                tools:text="One Rep Max" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/settingsEmailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="25dp"
                android:layout_toEndOf="@+id/settingsOnerm"
                android:text="User Email"
                android:textSize="24sp"
                tools:text="@string/hint_email" />

            <EditText
                android:id="@+id/settingsEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/settingsNfc"
                android:layout_alignStart="@+id/settingsNfc"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="0dp"
                android:text="@{settingsvm.observableSettings.email}"
                android:textSize="24sp"
                tools:text="@string/hint_email" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </TableLayout>

        <Button
            android:id="@+id/editSettingsButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="-8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/update"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />
    </RelativeLayout>


</layout>