<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="userSetting"
            type="ie.wit.work_iot_mobile.models.SettingsModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:elevation="24dp">

        <RelativeLayout
            android:id="@+id/cardSettings"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:background="@drawable/custom_border"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageIcon"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@mipmap/ic_launcher_round" />


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="750dp"
                android:layout_below="@+id/imageIcon"
                android:layout_alignStart="@+id/imageIcon"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/settingsGoalTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="25dp"
                    android:layout_toEndOf="@+id/imageIcon"
                    android:text="Exercise Goal"
                    android:textSize="24sp"
                    tools:text="Exercise Goal" />

                <TextView
                    android:id="@+id/settingsGoal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="0dp"
                    android:layout_toEndOf="@+id/imageIcon"
                    android:text="@{userSetting.exerciseGoal}"
                    android:textSize="24sp"
                    tools:text="Exercise Goal" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/settingsNfcTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="25dp"
                    android:layout_toEndOf="@+id/settingsGoal"
                    android:text="@string/hint_nfc"
                    android:textSize="24sp"
                    tools:text="@string/hint_nfc" />

                <TextView
                    android:id="@+id/settingsNfc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/settingsGoal"
                    android:layout_alignStart="@+id/settingsGoal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="0dp"
                    android:text="@{userSetting.nfc}"
                    android:textSize="24sp"
                    tools:text="@string/hint_nfc" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/settingsOnermTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="25dp"
                    android:layout_toEndOf="@+id/settingsNfc"
                    android:text="Current One Rep Max"
                    android:textSize="24sp"
                    tools:text="One Rep Max" />

                <TextView
                    android:id="@+id/settingsOnerm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/settingsNfc"
                    android:layout_alignStart="@+id/settingsNfc"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="0dp"
                    android:text="@{userSetting.oneRm}"
                    android:textSize="24sp"
                    tools:text="One Rep Max" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/settingsEmailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="25dp"
                    android:layout_toEndOf="@+id/settingsOnerm"
                    android:text="User Email"
                    android:textSize="24sp"
                    tools:text="@string/hint_email" />

                <TextView
                    android:id="@+id/settingsEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/settingsEmailTitle"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="0dp"
                    android:text="@{userSetting.email}"
                    android:textSize="24sp"
                    tools:text="@string/hint_email" />
            </TableLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</layout>